--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,9 @@ cache:
   yarn: true
   directories:
     - node_modules
+- provider: script
+  script: bin/build.sh
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
